<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:text="Nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="text|textPersonName|textCapWords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="98dp"
        android:layout_height="52dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="16dp"
        android:onClick="limparCampos"
        android:text="@string/limpar"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button7"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:onClick="salvar"
        android:text="@string/salvar"
        app:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text|textEmailAddress|textCapWords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="138dp"
        android:layout_height="331dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail">

        <CheckBox
            android:id="@+id/checkbox_segunda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segunda" />

        <CheckBox
            android:id="@+id/checkbox_terca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terca" />

        <CheckBox
            android:id="@+id/checkbox_quarta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quarta" />

        <CheckBox
            android:id="@+id/checkbox_quinta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quinta" />

        <CheckBox
            android:id="@+id/checkbox_sexta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexta" />

        <CheckBox
            android:id="@+id/checkbox_sabado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sabado" />

        <CheckBox
            android:id="@+id/checkbox_domingo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domingo" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/dias_de_treino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="36dp"
        android:text="@string/genero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Spinner
        android:id="@+id/spinnerAcademia"
        android:layout_width="227dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGenero" />

    <TextView
        android:id="@+id/textViewAcademia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/academia"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGenero" />

    <RadioGroup
        android:id="@+id/radioGroupGenero"
        android:layout_width="99dp"
        android:layout_height="96dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radioButtonFeminino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />

        <RadioButton
            android:id="@+id/radioButtonMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>